--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
@@ -26,8 +25,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginBottom="8dp"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/shrek" />
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,8 +50,8 @@
                     android:id="@+id/ic_trash"
                     android:layout_width="20dp"
                     android:layout_height="32dp"
-                    app:srcCompat="@drawable/ic_delete_name"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_delete" />
 
             </LinearLayout>
 
@@ -70,7 +68,6 @@
 
     </LinearLayout>
 
-    <!-- Черная полоска -->
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
