--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -8,7 +8,7 @@
             android:icon="@drawable/ic_profile"
             android:title="@string/profile" />
         <item
-            android:id="@+id/nav_options"
+            android:id="@+id/nav_history"
             android:icon="@drawable/ic_settings"
             android:title="@string/options" />
     </group>
