--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <Button
             android:id="@+id/btn_profile"
             android:layout_width="200dp"
@@ -57,7 +58,22 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_profile"
             android:visibility="visible"/>
 
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/themeSwitcher"
+            android:layout_width="300dp"
+            android:layout_height="55dp"
+            android:layout_gravity="start"
+            android:layout_marginHorizontal="60dp"
+            android:layout_marginBottom="75dp"
+            android:text="Темная тема"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
