--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
-    android:background="@color/white"
+    android:layout_height="250dp"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="16dp"
@@ -18,7 +17,7 @@
         android:layout_height="150dp"
         android:contentDescription="Navigation header"
         android:paddingTop="8dp"
-        app:srcCompat="@drawable/dvd1" />
+        app:srcCompat="@drawable/ic_profile" />
 
     <TextView
         android:layout_width="match_parent"
@@ -27,5 +26,6 @@
         android:text="Магазин DVD-дисков">
 
     </TextView>
+
 
 </LinearLayout>
